Bug 201392 Go Next Unread ignores folders with exactly one unread message r/sr=bienvenu